<resources>
    <string name="app_name">ShadowApp</string>
    <string name="start">START</string>
    <string name="getready">Get Ready!</string>
    <string name="all_rights_reserved_2021">All rights reserved© 2021</string>
    <string name="shadow_smartcar">SHADOW SMARTCAR©</string>
    <string name="forward">FORWARD</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="backward">BACKWARD</string>
    <string name="goHome">🏠</string>
    <string name="home">🏠</string>
    <string name="rightArrow">⮕</string>
    <string name="upArrow">▲</string>
    <string name="rightArrows">►</string>
    <string name="leftArrow">◄</string>
    <string name="downArrow">▼</string>
    <string name="caroverlook">Caroverlook</string>
    <string name="follow_car">FOLLOW CAR</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">profile</string>
    <string name="username">Username</string>
    <string name="locker">locker</string>
    <string name="stopbutton">◼</string>
    <string name="smart_car">\@string/SMART CAR</string>
    <string name="smart_car1">SMART CAR</string>
    <string name="voice_commands">Voice Commands</string>
    <string name="mic">Mic</string>
    <string name="get_in">get in</string>
    <string name="login_email_address">Email Address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name2">Name</string>
    <string name="login_email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="todo">TODO</string>
    <string name="loginpassword">Password</string>
    <string name="email2">Email</string>
    <string name="login_into_your_account">Login Into Your Account</string>
    <string name="create_an_account">Create An Account</string>
    <string name="caraid">CarAid</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_into_account">Login Into Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="profile1">Profile</string>
    <string name="logo">logo</string>
    <string name="full_name">Full Name</string>
    <string name="question">\?</string>
    <string name="caraid1">CarAid</string>
    <string name="log_in_to_account1">Log in to account</string>
    <string name="email_address1">Email Address</string>
    <string name="password1">Password</string>
    <string name="login1">Login</string>
    <string name="not_a_member_create_an_account">Not a member? Create An account</string>
    <string name="speaker">🔉</string>
    <string name="email_address3">Email Address</string>
    <string name="password3">Password</string>
    <string name="register3">Register</string>
    <string name="already_registered_login_here3">Already Registered? Login Here</string>
    <string name="logo4">logo</string>
    <string name="speaker2">🔉</string>
    <string name="profile3">Profile</string>
    <string name="joystick">Joystick</string>
    <string name="voice3">Voice</string>
    <string name="controller4">Controller</string>
    <string name="caraid3">CarAid</string>
    <string name="not_a_member_click_here_to_create_an_account">Not A Member ? Click Here To Create An Account.</string>


</resources>